manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/issuer: letsencrypt-ionos-prod
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [www.aquis-mana.de]
      secretName: frontend-tls
  rules:
    - host: www.aquis-mana.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
